# Thales-Remote-Cpp-gRPC

./: .gitignore
Thales-Remote-Cpp-gRPC-cMake/: CMakeLists.txt  CMakePresets.json
Thales-Remote-gRPC Client/: Thales-Remote-gRPC Client.vcxproj  Thales-Remote-gRPC Client.vcxproj.filters  Thales-Remote-gRPC-Client.cpp  main.cpp  thales-remote-grpc-client.h
Thales-Remote-gRPC Client/x64/Debug/: Thales-Remote-gRPC Client.exe.recipe  Thales-Remote-gRPC Client.vcxproj.FileListAbsolute.txt  Thales-Remote-gRPC-Client.exe.recipe  vc143.idb
Thales-Remote-gRPC Client/x64/Debug/Thales-R.33a71bb4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Thales-Remote-gRPC Client.write.1u.tlog  Thales-Remote-gRPC-Client.lastbuildstate  Thales-Remote-gRPC-Client.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Thales-Remote-gRPC-Server/: Thales-Remote-gRPC-Server.cpp  Thales-Remote-gRPC-Server.sln  Thales-Remote-gRPC-Server.vcxproj  Thales-Remote-gRPC-Server.vcxproj.filters  connection_manager.h  ism_txt_parser.h  system_overview.excalidraw  thalesfileserviceimpl.h  zahnerzenniumserviceimpl.h
Thales-Remote-gRPC-Server/Thales-R.20cf5204/x64/Debug/: Thales-Remote-gRPC-Server.exe.recipe  Thales-Remote-gRPC-Server.vcxproj.FileListAbsolute.txt  vc143.idb
Thales-Remote-gRPC-Server/Thales-R.20cf5204/x64/Debug/Thales-R.20cf5204.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Thales-Remote-gRPC-Server.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ThalesRemoteCppLibrary/: CMakeLists.txt  thalesremoteconnection.cpp  threadsafequeue.cpp
protos/: zahner.proto
